# jingzhi-ai

./: README.md
docs/plans/: 2026-03-27-frontend-review-skills-design.md  2026-03-27-frontend-review-skills-implementation-plan.md
skills/daily-investment-brief/: README.md  SKILL.md  pressure-tests.md  pyproject.toml  validate_skill.py
skills/daily-investment-brief/src/daily_investment_brief/: analysis.py  cli.py  fetchers.py  models.py
skills/daily-investment-brief/src/daily_investment_brief.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
skills/daily-investment-brief/tests/: test_analysis.py  test_cli.py  test_fetchers.py
skills/frontend-a11y-perf-critic/: SKILL.md
skills/frontend-qa-critic/: SKILL.md
skills/frontend-review-judge/: SKILL.md
skills/frontend-review-runner/: SKILL.md
skills/frontend-ui-critic/: SKILL.md
skills/video-remix/: .gitignore  README.md  SKILL.md  pyproject.toml
skills/video-remix/resources/persona/: profile.json
skills/video-remix/resources/prompts/: analyze.md  rewrite_long.md  rewrite_short.md  transcript_correction.md
skills/video-remix/src/: cli.py  llm.py  run_state.py
skills/video-remix/src/stages/: analyze.py  ingest.py  rewrite.py  style.py  transcribe.py  transcript.py
skills/video-remix/tests/: conftest.py  test_cli_help.py  test_llm.py  test_orchestration.py  test_run_state.py
skills/video-remix/tests/e2e/: test_pipeline_smoke.py
skills/video-remix/tests/stages/: test_analyze.py  test_ingest.py  test_rewrite.py  test_style.py  test_transcribe.py  test_transcript.py
(+22 files in other folders)
