[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "daily-investment-brief"
version = "0.1.0"
description = "Daily investment brief with live data fetching and conservative decision rules"
readme = "README.md"
requires-python = ">=3.11"

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
]

[project.scripts]
daily-investment-brief = "daily_investment_brief.cli:entrypoint"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
