[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "video-remix"
version = "0.1.0"
description = "Resumable video remix pipeline"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "typer>=0.12",
  "faster-whisper>=1.1.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
]

[project.scripts]
video-remix = "cli:entrypoint"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
